--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jvectormap/2.0.4/jquery-jvectormap.css"
     type="text/css" media="screen" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="I want to share some photos from my travel around the world">
+  <meta name="google-site-verification" content="E6To5XFZSRcs5uM8xDQiraPyq0MI0eA7-EBHYluMwDM" />
   <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
