--- a/public/index.html
+++ b/public/index.html
@@ -4,21 +4,16 @@
 <head>
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jvectormap/2.0.4/jquery-jvectormap.css"
-    type="text/css" media="screen" />
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jvectormap/2.0.4/jquery-jvectormap.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="I want to share some photos from my travel around the world">
+  <meta name="keywords" content="travel, world, photo, europe, africa, america, australia, artica, asia">
+  <meta name="author" content="Paligator, Pavol Zelenka, Svaty Jur, Pri Stadione, +421 904 328 274, paligator@gmail.com">
   <meta name="google-site-verification" content="E6To5XFZSRcs5uM8xDQiraPyq0MI0eA7-EBHYluMwDM" />
-  <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!-- Notice the use of %PUBLIC_URL% in the tags above. It
-    will be replaced with the URL of the `public` folder during the build. Only files inside the `public` folder can be
-    referenced from the HTML. Unlike "/favicon.ico" or "favicon.ico" , "%PUBLIC_URL%/favicon.ico" will work correctly
-    both with client-side routing and a non-root public URL. Learn how to configure a non-root public URL by running
-    `npm run build`. -->
   <title>My Dreams Come TRUE</title>
 </head>
 
