Optimalization by audit

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="I want to share some photos from my travel around the world">
   <meta name="keywords" content="travel, world, photo, europe, africa, america, australia, arktica, asia">
+  <meta name="theme-color" content="#006699">
   <meta name="author"
     content="Paligator, Pavol Zelenka, Svaty Jur, Pri Stadione, +421 904 328 274, paligator@gmail.com">
   <meta name="google-site-verification" content="E6To5XFZSRcs5uM8xDQiraPyq0MI0eA7-EBHYluMwDM" />
