--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 
+  <link rel="preconnect" href="https://paligator.sk">
+
   <!-- Integrity key can be generated https://www.srihash.org/ but don't forget to add key as sha256- even into nginx config, to get sha256- you will see error in console -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jvectormap/2.0.4/jquery-jvectormap.min.css"
     integrity="sha384-LmTs77jzi3Z94+7+p0wVpKuqGLPsiOaD2RpiBUwSZuJTsjxIz3qT7EIxuNOmWx6b" crossorigin="anonymous" />
