--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/lux/bootstrap.min.css"
     integrity="sha384-hVpXlpdRmJ+uXGwD5W6HZMnR9ENcKVRn855pPbuI/mwPIEKAuKgTKgGksVGmlAvt" crossorigin="anonymous">
 
+  <!-- <script src="https://apis.google.com/js/api.js" async defer></script> -->
+
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="I want to share some photos from my travel around the world">
   <meta name="keywords" content="travel, world, photo, europe, africa, america, australia, arktica, asia">
